--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 # DATASOURCE y colocar la siguiente confi guración (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/bd_integrador?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username = root
-spring.datasource.password = mysql
+#spring.datasource.url = jdbc:mysql://localhost:3306/bd_integrador?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.username = root
+#spring.datasource.password = mysql
+
+spring.datasource.url = ${JDBC_DATABASE_URL}
+spring.datasource.username = ${JDBC_DATABASE_USERNAME}
+spring.datasource.password = ${JDBC_DATABASE_PASSWORD}
 
 # Hibernate
 
@@ -13,4 +17,6 @@ spring.jpa.hibernate.ddlauto = update
 
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.type = TRACE
+# SWAGGER
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
