--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@
 #spring.datasource.username = root
 #spring.datasource.password = mysql
 
-spring.datasource.url = ${JDBC_DATABASE_URL}
-spring.datasource.username = ${JDBC_DATABASE_USERNAME}
-spring.datasource.password = ${JDBC_DATABASE_PASSWORD}
+spring.datasource.url=jdbc:${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
 # Hibernate
 
