--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # DATASOURCE y colocar la siguiente confi guración (DataSourceAutoConfiguration & DataSourceProperties)
-#spring.datasource.url = jdbc:mysql://localhost:3306/bd_integrador?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-#spring.datasource.username = root
-#spring.datasource.password = mysql
+spring.datasource.url = jdbc:mysql://localhost:3306/bd_integrador?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username = root
+spring.datasource.password = mysql
 
-spring.datasource.url=jdbc:${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+#spring.datasource.url=jdbc:${JDBC_DATABASE_URL}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
 # Hibernate
 
