--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 # DATASOURCE y colocar la siguiente confi guración (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/bd_integrador?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username = root
-spring.datasource.password = mysql
+spring.application.name=heroku_1032a5083427013
+#spring.datasource.url = jdbc:mysql://localhost:3306/bd_integrador?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.username = root
+#spring.datasource.password = mysql
 
+#bd heroku
+spring.datasource.url = jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_1032a5083427013user=bcb3b6ba582c24&password=b0054c40@us
+spring.datasource.username = bcb3b6ba582c24
+spring.datasource.password = b0054c40
+
+#mysql://bcb3b6ba582c24:b0054c40@us-cdbr-east-06.cleardb.net/heroku_1032a5083427013?reconnect=true
 #spring.datasource.url=jdbc:${JDBC_DATABASE_URL}
 #spring.datasource.username=${JDBC_DATABASE_USERNAME}
 #spring.datasource.password=${JDBC_DATABASE_PASSWORD}
